# match-template

./: Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
src/: lib.rs
tools/ci/: licenserc.yml
