[package]
name = "match-template"
version = "0.0.1"
edition = "2018"
description = "match-template is a procedural macro that generates repeated match arms by pattern."
license = "Apache-2.0"
repository = "https://github.com/tikv/match-template"
keywords = ["macro", "pattern-match", "tikv"]
categories = ["macro", "procedural-macro"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full", "extra-traits", "fold"] }
